Comments: update swagger documentation
